# mlx_lm

./: .gitignore  .webui_secret_key  MANIFEST.in  _bench_baseline.py  _bench_steps.py  _test_fused.py  bench_mtp_depths.py  chat.py  conversation_engine.py  fix_generate_loop.py  latex_parser.py  model_catalog.py  model_interface.py  model_lifecycle.py  orchestrator.py  patch_mtp_generate.py  pyproject.toml  settings_store.py  simple_markdown.py  test_mtp_logic.py  tui_adapter.py  tui_commands.py  tui_main.py  tui_model_config_editor.py  tui_model_picker.py  tui_options_selector.py  tui_personality_selector.py  tui_slash_command_menu.py  tui_stream_handler.py  turboquant_optimization.patch
.antigravitycli/: 0b07fff7-768e-41f4-a68d-f221a44859b8.json
mlx_lm/: __init__.py  chat.py  disk_cache.py  generate.py  server.py  utils.py  web_search.py
mlx_lm/models/: base.py  cache.py  mixed_quant_cache.py  qwen3_5.py  qwen3_5_moe.py  turboquant_cache.py  turboquant_fused.py  turboquant_kernels.py  turboquant_metal.py
mlx_lm/quant/: awq.py  turboquant_weights.py
mlx_lm/research_agent/: _utils.py  framing.py  memory.py  memory_manager.py  normalization.py  orchestrator.py  planning.py  retrieval.py  small_model.py
scripts/: turboquant_quantize_run.py  turboquant_test_gen.py  turboquant_validate_weights.py
tests/: test_conversation_engine_refactor.py  test_model_lifecycle.py  test_mtp.py  test_orchestrator_refactor.py  test_research_agent.py  test_runtime_layers_refactor.py  test_search_research.py  test_tui_bubbles.py  test_tui_help.py  test_tui_refactor.py  test_turboquant.py
textual_ui/: latex.py  personas.py  styles.py
textual_ui/widgets/: __init__.py  chat_input.py  (+6 more)
