[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-lm"
version = "0.31.3"
description = "LLMs with MLX and the Hugging Face Hub"
readme = "README.md"
authors = [
    {name = "MLX Contributors", email = "mlx@group.apple.com"},
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.31.2",
    "numpy",
    "transformers>=5.0.0",
    "sentencepiece",
    "protobuf",
    "pyyaml",
    "jinja2",
    "textual>=8.2.7",
]

[tool.setuptools]
packages = [
    "mlx_lm",
    "mlx_lm.models",
    "mlx_lm.quant",
    "mlx_lm.tuner",
    "mlx_lm.tool_parsers",
    "mlx_lm.chat_templates",
    "textual_ui",
    "textual_ui.widgets",
]

[project.optional-dependencies]
test = ["datasets", "lm-eval"]
train = ["datasets", "tqdm"]
evaluate = ["lm-eval", "tqdm"]

[project.scripts]
mlx_lm = "mlx_lm.cli:main"
"mlx_lm.awq" = "mlx_lm.quant.awq:main"
"mlx_lm.dwq" = "mlx_lm.quant.dwq:main"
"mlx_lm.dynamic_quant" = "mlx_lm.quant.dynamic_quant:main"
"mlx_lm.gptq" = "mlx_lm.quant.gptq:main"
"mlx_lm.benchmark" = "mlx_lm.benchmark:main"
"mlx_lm.cache_prompt" = "mlx_lm.cache_prompt:main"
"mlx_lm.chat" = "mlx_lm.chat:main"
"mlx_lm.convert" = "mlx_lm.convert:main"
"mlx_lm.evaluate" = "mlx_lm.evaluate:main"
"mlx_lm.fuse" = "mlx_lm.fuse:main"
"mlx_lm.generate" = "mlx_lm.generate:main"
"mlx_lm.lora" = "mlx_lm.lora:main"
"mlx_lm.perplexity" = "mlx_lm.perplexity:main"
"mlx_lm.server" = "mlx_lm.server:main"
"mlx_lm.share" = "mlx_lm.share:main"
"mlx_lm.manage" = "mlx_lm.manage:main"
"mlx_lm.upload" = "mlx_lm.upload:main"
